--- a/index.html
+++ b/index.html
@@ -3,11 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600' rel='stylesheet' type='text/css'>
 </head>
 <body>
-   <img src="img/heart.png" alt="">
-   <h1>UHNCE UHNCE UHNCE UHNCE</h1>
+     <nav role='navigation' id="header-nav">
+      <ul>
+        <li><a href="#">TICKETS</a></li>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">HOME</a></li>
+      </ul>
+    </nav>
+  
+   <img src="img/heart.png" alt="" class="heart" class="grow">
+   <img src="img/uhnce.png" alt="" class="uhnce">
+   
+   <h1>
+   MARCH 10TH, 2016 <br>
+   SPOKANE KNITTING FACTORY <br>
+   DOORS OPEN AT 7
+   </h1>
     
 </body>
+
+<footer> &copy; 2016<br>Millicent Schnebly</footer>
 </html>
