--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>FEEL THE BEAT</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600' rel='stylesheet' type='text/css'>
@@ -10,9 +10,9 @@
 <body>
      <nav role='navigation' id="header-nav">
       <ul>
-        <li><a href="#">TICKETS</a></li>
-        <li><a href="#">ABOUT</a></li>
-        <li><a href="#">HOME</a></li>
+        <li><a href="tickets.html">TICKETS</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="index.html">HOME</a></li>
       </ul>
     </nav>
   
