finished pages rough

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
       </ul>
     </nav>
   
-   <img src="img/heart.png" alt="" class="heart" class="grow">
+   <img src="img/heart.png" alt="" class="heart">
    <img src="img/uhnce.png" alt="" class="uhnce">
    
    <h1>
    MARCH 10TH, 2016 <br>
-   SPOKANE KNITTING FACTORY <br>
+   <a href="http://sp.knittingfactory.com/content/Directions">SPOKANE KNITTING FACTORY</a><br>
    DOORS OPEN AT 7
    </h1>
     
 </body>
 
-<footer> &copy; 2016<br>Millicent Schnebly</footer>
+<footer id="index-footer"> &copy; 2016<br>Millicent Schnebly</footer>
 </html>
