--- a/about.html
+++ b/about.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <nav role='navigation' id="about-nav">
+      <ul>
+        <li><a href="tickets.html">TICKETS</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="index.html">HOME</a></li>
+      </ul>
+    </nav>
     
+    <img src="img/collage.png" alt="picture collage" class="collage">
+    
+    <h2 class="about">ABOUT US</h2>
 </body>
+<footer id="about-footer"> &copy; 2016<br>Millicent Schnebly</footer>
 </html>
