--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>FEEL THE BEAT</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600' rel='stylesheet' type='text/css'>
 </head>
@@ -16,7 +17,7 @@
       </ul>
     </nav>
   
-   <img src="img/heart.png" alt="" class="heart">
+   <img src="img/heart.png" alt="" class="heart animated bounceIn">
    <img src="img/uhnce.png" alt="" class="uhnce">
    
    <h1>
