--- a/tickets.html
+++ b/tickets.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>TICKETS</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -15,8 +16,8 @@
       </ul>
     </nav>
     
-    <div class="ticket">
-        <img src="img/ticket.png" alt="photo of ticket">
+    <div class="ticket animated bounceIn">
+        <img src="img/ticket.png" alt="photo of ticket" class="animate" class="bounceIn">
     </div>
     
     <h2>BUY YOUR TICKETS</h2>
