--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>ABOUT</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
