reduced about size

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
       </ul>
     </nav>
     
-    <img src="img/collage.png" alt="picture collage" class="collage">
+    <img src="img/collage.gif" alt="picture collage" class="collage">
     
     <h2 class="about">ABOUT US</h2>
 </body>
