--- a/tickets.html
+++ b/tickets.html
@@ -7,21 +7,29 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-    <nav role='navigation' id="tickets-nav">
-      <ul>
-        <li><a href="tickets.html">TICKETS</a></li>
-        <li><a href="about.html">ABOUT</a></li>
-        <li><a href="index.html">HOME</a></li>
-      </ul>
-    </nav>
-    
-    <div class="ticket animated bounceIn">
-        <img src="img/ticket.png" alt="photo of ticket" class="animate" class="bounceIn">
-    </div>
-    
-    <h2>BUY YOUR TICKETS</h2>
-    <h3><a href="http://ticketswest.com/dkaldkjf">TICKETSWEST.COM</a></h3>
-</body>
-<footer id="tickets-footer"> &copy; 2016<br>Millicent Schnebly</footer>
+    <body>
+        <nav role='navigation' id="tickets-nav">
+          <ul>
+            <li><a href="tickets.html">TICKETS</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="index.html">HOME</a></li>
+          </ul>
+        </nav>
+
+        <h2 id="tickets">BUY YOUR<br>TICKETS</h2>
+
+        <h3>
+            <a href="http://ticketswest.com/dkaldkjf">TICKETSWEST.COM</a>
+        </h3>
+
+        <div class="ticket">
+            <img src="img/ticket.png" alt="photo of ticket" class="animate" class="bounceIn">
+        </div>
+
+    </body>
+
+    <footer id="tickets-footer">
+         &copy; 2016<br>Millicent Schnebly
+    </footer>
+
 </html>
