--- a/about.html
+++ b/about.html
@@ -20,19 +20,17 @@
     <img src="img/heart.png" alt="heart" class="large-heart animated bounceIn">
     
     <h2 class="about">ABOUT<br>US</h2>
+    <div class="line"></div>
     
-    <main class="grid-container">
-        <div class="grid-container">
-            <section>
-                <img src="" alt="">
-            </section>
-        </div>
-        <div class="grid-container">
-           <section>
-               <img src="" alt="">
+
+            <section id="photo" class="grid-container">
+                <img src="img/trains.gif" alt="" class="grid-6">
+               <img src="img/tattoos.gif" alt="" class="grid-6">
            </section> 
-        </div>
-    </main>
+     <div class="line"></div>
+     <h4>WHO ARE WE?</h4>
+     <h4>WHAT WE DO</h4>
+     <h4>BE ONE OF US</h4>
 </body>
 <footer id="about-footer"> &copy; 2016<br>Millicent Schnebly</footer>
 </html>
