--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ABOUT</title>
+    <title>ABOUT US</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/grid.css">
@@ -28,8 +28,16 @@
                <img src="img/tattoos.gif" alt="" class="grid-6">
            </section> 
      <div class="line"></div>
-     <h4>WHO ARE WE?</h4>
+     <h4 class="who">WHO ARE WE?</h4>
+         <p class="big red">ROCKY MOUNTAIN NOMADS</p>
+         <p class="medium">PORTLAND BASED ALTERNATIVE ELECTRONIC COOPERATIVE</p>
+         <p class="copy">We are a team of rad dudes from Portland who decided to get together one night in our garage and jam, and it all went from there. Charlie and Ryder are the minds behind the madness, and are what keep our jams going. We started booking gigs in early 2014 and it's been snowballing ever since.</p>
      <h4>WHAT WE DO</h4>
+        <div class="red what">
+         <p class="body">CONCERT HOUSE GIGS</p>
+         <p class="body">PRIVATE EVENTS</p>
+         <p class="body">RANDOM WEIRD SHIT, JUST ASK.</p>
+        </div>
      <h4>BE ONE OF US</h4>
 </body>
 <footer id="about-footer"> &copy; 2016<br>Millicent Schnebly</footer>
