nav, final changes

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
         <body>
              <nav role='navigation' id="header-nav">
               <ul>
+                
                 <li><a href="tickets.html">TICKETS</a></li>
+                <li><a href="about.html#contact">CONTACT</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="index.html">HOME</a></li>
+                
               </ul>
             </nav>
 
@@ -22,7 +25,7 @@
 
            <h1>
                MARCH 10TH, 2016 <br>
-               <a href="http://sp.knittingfactory.com/content/Directions">SPOKANE KNITTING FACTORY</a>            <br>
+               <a href="http://sp.knittingfactory.com/content/Directions" target="_blank">SPOKANE KNITTING FACTORY</a>            <br>
                DOORS OPEN AT 7
            </h1>
 
