--- a/tickets.html
+++ b/tickets.html
@@ -10,7 +10,9 @@
     <body>
         <nav role='navigation' id="tickets-nav">
           <ul>
+           
             <li><a href="tickets.html">TICKETS</a></li>
+            <li><a href="about.html#contact">CONTACT</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="index.html">HOME</a></li>
           </ul>
@@ -19,7 +21,7 @@
         <h2 id="tickets">BUY YOUR<br>TICKETS</h2>
 
         <h3>
-            <a href="http://ticketswest.com/dkaldkjf">TICKETSWEST.COM</a>
+            <a href="http://ticketswest.com/dkaldkjf" target="_blank">TICKETSWEST.COM</a>
         </h3>
 
         <div class="ticket">
