--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <nav role='navigation' id="about-nav">
