--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
                 
               </ul>
             </nav>
-
+        <div>
            <img src="img/heart.png" alt="" class="heart animated bounceIn">
            <img src="img/uhnce.png" alt="" class="uhnce">
+        </div>
 
            <h1>
                MARCH 10TH, 2016 <br>
@@ -32,7 +33,4 @@
 
         </body>
 
-        <footer id="index-footer"> 
-            &copy; 2016<br>Millicent Schnebly
-        </footer>
 </html>
